# casas-gis

./: .env.example  .gitignore  Makefile  README.md  README_usage_GRASS_GIS6.md  README_usage_GRASS_GIS8.md  parse_input.py  pyproject.toml
casas_gis/: cleanup.py  color.py  constants.py  gis_init.py  grass.py  grassgis.py  gui.py  init.py  input.py  interpolation.py  locations.py  parse_input.py  report.py  stats.py
casas_gis/color_rules/: panoply.txt
casas_gis/input_data/: Olive_30set19_00002.txt  Olive_30set19_00003.txt  Olive_30set19_00004.txt
casas_gis/tmp/: Olive_30set19_00002_Bloomday.txt  Olive_30set19_00002_ddbMinus10.txt  Olive_30set19_00003_Bloomday.txt  Olive_30set19_00004_Bloomday.txt  (+1 more)
casas_gis_old/: BlackAndGrey  BloomdayFarmsAndStations.grc  Desktop.lnk  Downloads.lnk  GMT_no_green.grass  GMT_no_green.xls  MedOliveGrids.grc  RegressionZonesFaoMedOliveNEW_paired.psmap  RegressionZonesFaoMedOliveNEW_set1.psmap  RegressionZonesFaoMedOliveNEW_set3.psmap  TexMex.kml  batch_OliveProtheus.sh  batch_USA_olive.sh  batch_USA_screwworm.sh  batch_swd_EU.sh  bcgyr_colorRule_corrected  casasgisToZen.ffs_gui  d.col.names  defaultColorRule_NASA_Med.GRASSpalette  defaultColorRule_viridis  distanceTableAll.txt  ecoZonesFaoGrape.psmap  era40.grc  iberia.gxw  india.html  inputPar.txt  olive_bloomday_sar_latlong.txt  spainRegion.txt  theLatLongWorld.gxw  tomato_YieldPerHectare_175_above_0_boxplot_color_rule.txt  tomato_YieldPerHectare_175_above_0_stats.txt  trt2000.txt  varList.txt  viridis.xlsx
template-demo/: script.py  template.html
tests/: test_casas_gis.py
(+210 files in other folders)
