[tool.poetry]
name = "casas_gis"
version = "0.1.0"
description = ""
authors = ["Luigi Ponti <quartese@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
grass-script = "^0.0.4"
grass-session = "^0.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
