[tool.poetry]
name = "casas_gis"
version = "0.1.0"
description = ""
authors = ["Luigi Ponti <quartese@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.5"
grass-session = "^0.5"
python-dotenv = "^0.19.0"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
